# libedifact

./: CMakeLists.txt
include/: libedifact.h
sample/: CMakeLists.txt  sampleprog.c
src/: CMakeLists.txt  factory.c  generator.c  libedifact.c  parser.c  private_libedifact.h  sbank.c
